--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
   <header>
     <!-- プロフィール画像を追加 -->
     <div class="profile-image-container">
-        <img src="ogp.jpg" alt="天音りん プロフィール画像" class="profile-img">
+        <img src="ogp.jpg" alt="内堀遥香 プロフィール画像" class="profile-img">
     </div>
-    <div class="catch">可愛いだけじゃだめですか？<br><br>ダーツはガチ！だけどみんなを楽しく盛り上げます</div>
-    <div class="subcatch">JAPANプロ<br>東京・関東がメイン</div>
+    <div class="catch">『 まだ秘密兵器 』<br><br>ダーツはガチ！だけどみんなを楽しく盛り上げます</div>
+    <div class="subcatch">元ダーツバーの社員だったので店内の細かな目配り気配りが得意なダーツプレイヤー</div>
   </header>
   <main class="container">
 
@@ -60,7 +60,11 @@
       <ul class="strengths-list">
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
-          <span class="strength-text">盛り上げ力</span>
+          <span class="strength-text">ドリンク運びはお手の物！</span>
+        </li>
+        <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
+          <span class="strength-text">盛り上げ力100%マックス！</span>
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
