--- a/index.html
+++ b/index.html
@@ -64,23 +64,23 @@
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
-          <span class="strength-text">盛り上げ力100%マックス！</span>
+          <span class="strength-text">盛り上げ力は常に100%マックス！</span>
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
-          <span class="strength-text">初心者・女性対応</span>
+          <span class="strength-text">初心者・女性対応もお任せ下さい</span>
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️☆☆</span>
-          <span class="strength-text">SNS集客</span>
+          <span class="strength-text">SNS集客は可能な限り投稿いたします...</span>
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️☆☆</span>
-          <span class="strength-text">イベントMC／販促</span>
+          <span class="strength-text">グッズ販売OK</span>
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️⭐️☆</span>
-          <span class="strength-text">柔軟対応・カスタム</span>
+          <span class="strength-text">柔軟対応・カスタム（お気軽にご相談ください）</span>
         </li>
       </ul>
       <div class="strength-description">
@@ -164,13 +164,13 @@
         <div class="ok-list">
           <h3>OK（歓迎）</h3>
           <ul>
-            <li>乾杯・写真・SNS交流</li>
+            <li>ショット、クライナーOK（ほどほどで...笑）・ドリンク乾杯・写真撮影・SNS交流投稿</li>
           </ul>
         </div>
         <div class="ng-list">
           <h3>NG（ご遠慮ください）</h3>
           <ul>
-            <li>（準備中）</li>
+            <li>お触り、強制飲酒、連絡先交換（SNSはOK）</li>
           </ul>
         </div>
       </div>
