--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="profile-image-container">
         <img src="ogp.jpg" alt="内堀遥香 プロフィール画像" class="profile-img">
     </div>
-    <div class="catch">『 まだ秘密兵器 』<br><br>ダーツはガチ！だけどみんなを楽しく盛り上げます</div>
+    <div class="catch">『 まだ秘密兵器 』<br>ダーツはガチ！だけどみんなを楽しく盛り上げます</div>
     <div class="subcatch">元ダーツバーの社員だったので店内の細かな目配り気配りが得意なダーツプレイヤー</div>
   </header>
   <main class="container">
