--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </section>
 
     <section class="gallery-section section">
-      <h2 class="section-title">ギャラリー</h2>
+      <h2 class="section-title">ギャラリー（宣伝用の使用はOK）</h2>
       <div class="gallery-wrapper">
         <button id="gallery-left" class="gallery-arrow">◀</button>
         <div id="gallery-track" class="gallery-track">
