--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
     <div class="profile-image-container">
         <img src="ogp.jpg" alt="内堀遥香 プロフィール画像" class="profile-img">
     </div>
-    <div class="catch">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツでも大好き！<br>みんなを巻き込んで楽しくお店を盛り上げます！</div>
-    <div class="subcatch">元ダーツバーの社員だったので店内の細かな目配り気配りが得意なダーツプレイヤー</div>
+    <div class="catch">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツでも大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div>
+    <div class="subcatch">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意なダーツプレイヤー</div>
   </header>
   <main class="container">
 
@@ -62,6 +62,10 @@
           <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
           <span class="strength-text">ドリンク運びはお手の物！</span>
         </li>
+         <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
+          <span class="strength-text">目配りと周りへの気配り</span>
+        </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
           <span class="strength-text">盛り上げ力は常に100%マックス！</span>
@@ -72,7 +76,7 @@
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️☆☆</span>
-          <span class="strength-text">SNS集客は可能な限り投稿いたします...</span>
+          <span class="strength-text">SNS集客→頑張って投稿...</span>
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️☆☆</span>
@@ -84,33 +88,31 @@
         </li>
       </ul>
       <div class="strength-description">
-        ダーツもお酒も乾杯大大大歓迎！<br>とにかくダーツして遊びましょう♡<br>
+        元ダーツバーの社員だったので店内の細かな目配り気配りが得意です！<br><br>
+        ダーツもお酒も乾杯も大大大歓迎！<br>とにかくダーツして遊びましょう♡<br><br>
         少しずつ成長して絶対にプロで活躍するので応援お願いします！<br>金額・条件などご相談お気軽に。
       </div>
     </section>
 
     <section class="gallery-section section">
-      <h2 class="section-title">ギャラリー（宣伝用の使用はOK）</h2>
+      <h2 class="section-title">ギャラリー（宣伝用の使用OK）</h2>
       <div class="gallery-wrapper">
         <button id="gallery-left" class="gallery-arrow">◀</button>
         <div id="gallery-track" class="gallery-track">
           <div class="gallery-item">
-            <img src="https://via.placeholder.com/250x350/B0E0E6/000000?text=Haruka+1" alt="内堀遥香 イベントの様子1" title="イベントの様子1">
+            <img src="img_1.jpg" alt="内堀遥香 イベントの様子1" title="イベントの様子1">
           </div>
           <div class="gallery-item">
-            <img src="https://via.placeholder.com/250x350/ADD8E6/000000?text=Haruka+2" alt="内堀遥香 イベントの様子2" title="イベントの様子2">
+            <img src="img_2.jpg" alt="内堀遥香 イベントの様子2" title="イベントの様子2">
           </div>
           <div class="gallery-item">
-            <img src="https://via.placeholder.com/250x350/87CEEB/000000?text=Haruka+3" alt="内堀遥香 イベントの様子3" title="イベントの様子3">
+            <img src="img_3.jpg" alt="内堀遥香 イベントの様子3" title="イベントの様子3">
           </div>
           <div class="gallery-item">
-            <img src="https://via.placeholder.com/250x350/6A5ACD/FFFFFF?text=Haruka+4" alt="内堀遥香 イベントの様子4" title="イベントの様子4">
+            <img src="img_4.jpg" alt="内堀遥香 イベントの様子4" title="イベントの様子4">
           </div>
           <div class="gallery-item">
-            <img src="https://via.placeholder.com/250x350/6495ED/FFFFFF?text=Haruka+5" alt="内堀遥香 イベントの様子5" title="イベントの様子5">
-          </div>
-          <div class="gallery-item">
-            <img src="https://via.placeholder.com/250x350/4682B4/FFFFFF?text=Haruka+6" alt="内堀遥香 イベントの様子6" title="イベントの様子6">
+            <img src="img_5.jpg" alt="内堀遥香 イベントの様子5" title="イベントの様子5">
           </div>
         </div>
         <button id="gallery-right" class="gallery-arrow">▶</button>
@@ -118,19 +120,25 @@
     </section>
 
     <section class="menu-section section">
-      <h2 class="section-title">対応イベント</h2>
+      <h2 class="section-title">イベントメニュー</h2>
       <ul class="service-list">
         <li>対戦チャレンジマッチ</li>
         <li>プレイヤーday</li>
-        <li>お酒も結構飲めます！（ショットは控えめで笑）ダーツはなんでもやりましょう！</li>
+        <li>お酒も好きなので飲みイベントもOK！</li>
       </ul>
     </section>
 
     <section class="achievements-section section">
-      <h2 class="section-title">実績</h2>
+      <h2 class="section-title">実績・評価</h2>
       <div class="achievement-text">
         <div class="stats-summary">
           ・JAPAN LADIES ほぼ参戦中<br>
+        </div>
+      </div>
+      <div class="achievement-text">
+        <div class="store-testimonial">
+          <b>高円寺Kplus店長</b><br>
+          いつもいろんなお客さんを巻き込みながらダーツをしてくれるので最近はお客さんのダーツ熱が上がってみんなダーツに燃えるようになりました。<br>
         </div>
       </div>
     </section>
@@ -140,11 +148,11 @@
       <div class="price-items">
         <div class="price-item">
           <div class="item-label">ダーツプレイヤーday「基本4時間」</div>
-          <div class="item-detail">20,000円から</div>
+          <div class="item-detail">20,000円から（税込）</div>
         </div>
         <div class="price-item">
           <div class="item-label">ハウスイベント「大会終了まで」</div>
-          <div class="item-detail">30,000円</div>
+          <div class="item-detail">30,000円（税込）</div>
         </div>
         <div class="price-item">
           <div class="item-label">その他</div>
@@ -152,8 +160,8 @@
         </div>
       </div>
       <div class="price-note">
-        ※交通費：都内一律1,000円／その他場所により要相談<br>
-        ※宿泊費：お店で手配、自身で手配した場合は後で全額負担（可能な限り安いプランで宿泊致します。）<br>
+        ※交通費：都内一律1,000円／その他場所により要相談<br><br>
+        ※宿泊費：お店で手配、自身で手配した場合は後で全額負担（可能な限り安いプランで宿泊致します。）人の家は不可です。<br><br>
         ※ご予算やイベント内容に応じて柔軟にご提案しますのでお気軽にご相談ください。
       </div>
     </section>
@@ -177,31 +185,40 @@
     </section>
 
     <section class="sponsor-section section">
-      <h2 class="section-title">スポンサー & グッズ紹介</h2>
+      <h2 class="section-title">スポンサー・おすすめ店舗</h2>
       <ul class="sponsor-list">
         <li class="sponsor-item">
           <span class="sponsor-name">JOKER DRIVER</span>
-          <span class="sponsor-desc">プレイヤーグッズあり（アクキー・タンブラー・カード）</span>
-      <a href="https://jokerdriver.com/" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+          <span class="sponsor-desc">プレイヤーグッズあります！<br>大会ブースか私から直接、手渡し致します！（サイン付き！）<br><br>アクリルキーホルダー 1,500円・タンブラー・ダーツライブカード・ダーツケースなど</span>
+          <a href="https://jokerdriver.com/" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
         </li>
-        <li class="sponsor-item">
-          <span class="sponsor-name">GSD/kplus/Darts bar Rocks/D-drunk</span>
-          <span class="sponsor-desc">サポート・おすすめ店舗</span>
+          <li class="sponsor-item">
+          <span class="sponsor-name">GSD</span>
+          <span class="sponsor-desc">カッコいいも可愛いも100%満足対応のオーダーユニフォーム屋さん</span> 
+          <a href="http://www.gsd-darts.com/" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+         <li class="sponsor-item">
+          <span class="sponsor-name">カラオケ＆ダーツBAR Kplus高円寺</span>
+          <span class="sponsor-desc">杉並区でダーツするならココが一番ダーツ熱がすごいからオススメ！</span> 
+          <a href="https://mintwood.github.io/kplus-koenji/index.html" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+         <li class="sponsor-item">
+          <span class="sponsor-name">D-drunk</span>
+          <span class="sponsor-desc">ダーツもカラオケも楽しめる！プロも多いからガチで楽しめる！</span> 
+          <a href="https://search.dartslive.com/jp/shop/86ee45be90b0a3f40d9b047a20a7ba1e" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+         <li class="sponsor-item">
+          <span class="sponsor-name">DARTS BAR ROCKS</span>
+          <span class="sponsor-desc">岡崎でダーツするならここ行ってみて！</span> 
+          <a href="https://search.dartslive.com/jp/shop/0c3d6010f50cee17a3f63593b5358cc4/basic-information" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
         </li>
       </ul>
-      <div class="goods-list" style="margin-top:12px;">
-        <b>グッズ販売：</b><br>
-        ・アクリルキーホルダー 1,500円<br>
-        ・タンブラー 2,200円<br>
-        ・ダーツライブカード 3,000円<br>
-        ・ダーツケース（調査中）<br>
-      </div>
     </section>
 
     <section class="contact-section section">
       <h2 class="section-title">かんたん相談 & お問い合わせ</h2>
       <div class="contact-description">
-        下記テンプレートを編集し、コピーしてInstagramまたはXのDMで送信してください。
+        下記テンプレートに入力後、コピーしてInstagram、XのDMで送信してください。
       </div>
       <textarea id="contact-template" rows="10" class="input">
 【店舗名・会社名】
