--- a/index.html
+++ b/index.html
@@ -24,6 +24,17 @@
   <meta name="twitter:description" content="JAPAN LADIES所属プロ。SNS発信・集客・現場盛り上げをすべてサポート。">
   <meta name="twitter:image" content="（準備中）">
   <meta name="twitter:image:alt" content="女子プロダーツプレイヤー内堀遥香 イベントイメージ">
+
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-J8Y2ZGTG00"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-J8Y2ZGTG00');
+</script>
+  
 </head>
 <body>
   <header>
