--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
           <div class="item-label">ハウスイベント「大会終了まで」</div>
           <div class="item-detail">30,000円（税込）</div>
         </div>
+          <div class="price-item">
+          <div class="item-label">大型トーナメント出演「閉会まで」</div>
+          <div class="item-detail">30,000円（税込）</div>
+        </div>
         <div class="price-item">
           <div class="item-label">その他</div>
           <div class="item-detail">相談可能／お店・内容により変動が多少ありますのでお気軽にDMください。<br>柔軟にご対応致します。</div>
@@ -172,8 +176,9 @@
       </div>
       <div class="price-note">
         ※交通費：都内一律1,000円／その他場所により要相談<br><br>
-        ※宿泊費：お店で手配、自身で手配した場合は後で全額負担（可能な限り安いプランで宿泊致します。）人の家は不可です。<br><br>
-        ※ご予算やイベント内容に応じて柔軟にご提案しますのでお気軽にご相談ください。
+        ※宿泊費がかかる場合：お店で手配&ご負担、自身で手配した場合は後で全額負担（可能な限り安いプランで宿泊致します。）人の家は不可です。<br><br>
+        ※大会前後やその地域での数日間のイベントとあわせてご依頼いただく場合、交通費・宿泊費を割安で対応します。<br><br>
+        ご予算やイベント内容に応じてついても柔軟に調整できますので、ぜひお気軽にご相談ください。まずは「相談だけ」でも大歓迎！
       </div>
     </section>
 
@@ -225,7 +230,23 @@
         </li>
       </ul>
     </section>
-
+    <section class="faq-section section">
+      <h2 class="section-title">Q&A・よくあるご質問</h2>
+      <ul class="faq-list">
+        <li><b>Q: 企画が未定でも頼めますか？</b><br>
+          A: →「ざっくり希望・ご予算だけでもご提案OK」</li><br>
+        <li><b>Q: イベントは盛り上がりますか？</b><br>
+          A: →「精一杯、お客様と交流しダーツやトークで盛り上げます！」</li>
+      </ul>
+    </section>
+    <section class="recommend-section section">
+      <h2 class="section-title">こんなオーナー様、イベント企画担当様に！</h2>
+      <ul class="recommend-list">
+        <li>「プロイベント」でもっと集客したい方へ</li>
+        <li>「女性・若い層を増やしたい」方へ</li>
+        <li>「お店をもっと盛り上げたい！」方へ</li>
+      </ul>
+    </section>
     <section class="contact-section section">
       <h2 class="section-title">かんたん相談 & お問い合わせ</h2>
       <div class="contact-description">
