--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
       <div class="price-note">
         ※交通費：都内一律1,000円／その他場所により要相談<br><br>
         ※宿泊費がかかる場合：お店で手配&ご負担、自身で手配した場合は後で全額負担（可能な限り安いプランで宿泊致します。）人の家は不可です。<br><br>
-        ※大会前後やその地域での数日間のイベントとあわせてご依頼いただく場合、交通費・宿泊費を割安で対応します。<br><br>
+        ※大会前後やその地域での数日間のイベント、複数店舗でのイベントは大歓迎です。<br><br>
         ご予算やイベント内容に応じてついても柔軟に調整できますので、ぜひお気軽にご相談ください。まずは「相談だけ」でも大歓迎！
       </div>
     </section>
