--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <meta property="og:title" content="内堀遥香｜女子プロダーツイベント出演依頼はこちら">
   <meta property="og:description" content="JAPAN LADIES所属。盛り上げ・集客・初心者対応もOK。現場とネットで“距離感バグってる”盛り上げ力を実感ください。">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://prodarts.github.io/player_uchibori/">
-  <meta property="og:image" content="（準備中）">
+  <meta property="og:url" content="https://prodarts.github.io/player_hal/">
+  <meta property="og:image" content="https://prodarts.github.io/player_hal/ogp.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
   <meta property="og:image:alt" content="女子プロダーツプレイヤー内堀遥香のイベント営業イメージ">
