--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="内堀遥香｜女子プロダーツイベント出演依頼はこちら">
   <meta name="twitter:description" content="JAPAN LADIES所属プロ。SNS発信・集客・現場盛り上げをすべてサポート。">
-  <meta name="twitter:image" content="（準備中）">
+  <meta name="twitter:image" content="https://prodarts.github.io/player_hal/ogp.jpg">
   <meta name="twitter:image:alt" content="女子プロダーツプレイヤー内堀遥香 イベントイメージ">
 
   <!-- Google tag (gtag.js) -->
