--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <title>内堀遥香｜女子プロダーツイベント出演依頼はこちら</title>
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/jpeg" href="favicon.jpg">
+  <link rel="icon" type="image/jpeg" href="favicon.png">
   <!-- 必須メタタグ -->
   <meta name="description" content="プロダーツプレイヤー・内堀遥香（JAPAN LADIES所属）の公式イベント営業LP。店舗集客・SNS拡散・現場盛り上げすべてお任せください。">
   <!-- OGP / SNS共有用メタタグ -->
@@ -13,10 +13,11 @@
   <meta property="og:description" content="JAPAN LADIES所属。盛り上げ・集客・初心者対応もOK。現場とネットで“距離感バグってる”盛り上げ力を実感ください。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://prodarts.github.io/player_hal/">
-  <meta property="og:image" content="https://prodarts.github.io/player_hal/ogp.jpg">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:image:alt" content="女子プロダーツプレイヤー内堀遥香のイベント営業イメージ">
+　<meta property="og:image" content="https://prodarts.github.io/player_hal/ogp.jpg">
+<meta property="og:image:secure_url" content="https://prodarts.github.io/player_hal/ogp.jpg">
+<meta property="og:image:type" content="image/jpeg">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
   <meta property="og:site_name" content="内堀遥香 イベント営業LP">
   <!-- Twitterカード -->
   <meta name="twitter:card" content="summary_large_image">
