--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <div class="strength-description">
         元ダーツバーの社員だったので店内の細かな目配り気配りが得意です！<br><br>
         ダーツもお酒も乾杯も大大大歓迎！<br>とにかくダーツして遊びましょう♡<br><br>
-        少しずつ成長して絶対にプロで活躍するので応援お願いします！<br>金額・条件などご相談お気軽に。
+        少しずつ成長して絶対にプロで活躍するので応援お願いします！<br>金額・条件などご相談はお気軽に。
       </div>
     </section>
 
