--- a/index.html
+++ b/index.html
@@ -172,9 +172,9 @@
         </div>
       </div>
       <div class="price-note">
-        ※交通費：都内一律1,000円／その他場所により要相談<br><br>
+        ※交通費：都内一律1,000円／その他は場所により要相談<br><br>
         ※宿泊費がかかる場合：お店で手配&ご負担、自身で手配した場合は後で全額負担（可能な限り安いプランで宿泊致します。）人の家は不可です。<br><br>
-        ※大会前後やその地域での数日間のイベント、複数店舗でのイベントは大歓迎です。<br><br>
+        ※大会前後のその地域での数日間のイベント、複数店舗でのイベントは大歓迎です。<br><br>
         ご予算やイベント内容に応じてついても柔軟に調整できますので、ぜひお気軽にご相談ください。まずは「相談だけ」でも大歓迎！
       </div>
     </section>
@@ -185,13 +185,13 @@
         <div class="ok-list">
           <h3>OK（歓迎）</h3>
           <ul>
-            <li>ショット、クライナーOK（ほどほどで...笑）・ドリンク乾杯・写真撮影・SNS交流投稿</li>
+            <li>ショット、クライナーOK（ほどほどで...）・ドリンク乾杯・写真撮影・SNS交流投稿</li>
           </ul>
         </div>
         <div class="ng-list">
           <h3>NG（ご遠慮ください）</h3>
           <ul>
-            <li>お触り、強制飲酒、連絡先交換（SNSはOK）</li>
+            <li>お触り、強制飲酒、連絡先交換（SNSはOK）、長時間拘束</li>
           </ul>
         </div>
       </div>
@@ -202,7 +202,7 @@
       <ul class="sponsor-list">
         <li class="sponsor-item">
           <span class="sponsor-name">JOKER DRIVER</span>
-          <span class="sponsor-desc">プレイヤーグッズあります！<br>大会ブースか私から直接、手渡し致します！（サイン付き！）<br><br>アクリルキーホルダー 1,500円・タンブラー・ダーツライブカード・ダーツケースなど</span>
+          <span class="sponsor-desc">プレイヤーグッズあります！<br>大会ブースか私から直接、手渡し致します！（サイン付きの可！）<br><br>アクリルキーホルダー 1,500円・タンブラー・ダーツライブカード・ダーツケースなど</span>
           <a href="https://jokerdriver.com/" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
         </li>
           <li class="sponsor-item">
