--- a/index.html
+++ b/index.html
@@ -143,6 +143,9 @@
         <div class="stats-summary">
           ・JAPAN LADIES ほぼ参戦中<br>
         </div>
+        <div class="stats-summary">
+          ・JAPAN LADIES 2024年175位<br>
+        </div>
       </div>
       <div class="achievement-text">
         <div class="store-testimonial">
