--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
   <header>
     <!-- プロフィール画像を追加 -->
     <div class="profile-image-container">
-        <img src="ogp.jpg" alt="内堀遥香 プロフィール画像" class="profile-img">
+        <img src="ogp.jpg" alt="女子プロダーツプレイヤー内堀遥香｜東京都でイベント出演依頼受付中" class="profile-img">
     </div>
     <div class="catch">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツでも大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div>
-    <div class="subcatch">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意なダーツプレイヤー</div>
+    <div class="subcatch">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意なダーツプレイヤー<br>プロダーツイベント出演依頼</div>
   </header>
   <main class="container">
-
+    <h1 class="blue-h1">今日もどこかでダーツが出会いをつないでる</h1>
     <section class="profile-section section">
       <h2 class="section-title">プロフィール</h2>
       <table class="info-table">
@@ -59,12 +59,17 @@
         <tr><td>活動エリア</td><td>東京・関東エリア（その他、応相談）</td></tr>
         <tr><td>所属</td><td>Soft Darts Professional Tour JAPAN・JAPAN LADIES</td></tr>
         <tr><td>レーティング</td><td>ダーツライブ 10</td></tr>
-        <tr><td>SNS</td>
-          <td>
-            <a href="https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr" target="_blank" rel="noopener">Instagram</a> ／
-            <a href="https://x.com/haru5372darts" target="_blank" rel="noopener">X</a>
-          </td>
-        </tr>
+  <tr class="sns-row">
+  <td>私のSNS</td>
+  <td>
+    <a href="https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr" target="_blank" rel="noopener">
+      <img src="Instagram_icon.png" alt="Instagram" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
+    </a>
+    <a href="https://x.com/haru5372darts" target="_blank" rel="noopener">
+      <img src="X_icon.png" alt="X（旧Twitter）" style="width:32px;height:32px;vertical-align:middle;">
+    </a>
+  </td>
+</tr>
       </table>
     </section>
 
@@ -109,19 +114,19 @@
         <button id="gallery-left" class="gallery-arrow">◀</button>
         <div id="gallery-track" class="gallery-track">
           <div class="gallery-item">
-            <img src="img_1.jpg" alt="内堀遥香 イベントの様子1" title="イベントの様子1">
+            <img src="img_1.jpg" alt="内堀遥香｜東京都の女子プロダーツイベント出演・依頼はお気軽に" title="イベントの様子1">
           </div>
           <div class="gallery-item">
-            <img src="img_2.jpg" alt="内堀遥香 イベントの様子2" title="イベントの様子2">
+            <img src="img_2.jpg" alt="女子プロダーツ内堀遥香｜東京都の店舗イベント出演・接客の様子" title="イベントの様子2">
           </div>
           <div class="gallery-item">
-            <img src="img_3.jpg" alt="内堀遥香 イベントの様子3" title="イベントの様子3">
+            <img src="img_3.jpg" alt="内堀遥香プロ｜東京都女子プロダーツイベントでのダーツプレイ風景" title="イベントの様子3">
           </div>
           <div class="gallery-item">
-            <img src="img_4.jpg" alt="内堀遥香 イベントの様子4" title="イベントの様子4">
+            <img src="img_4.jpg" alt="女子プロダーツプレイヤー内堀遥香｜イベント出演先店舗にて" title="イベントの様子4">
           </div>
           <div class="gallery-item">
-            <img src="img_5.jpg" alt="内堀遥香 イベントの様子5" title="イベントの様子5">
+            <img src="img_5.jpg" alt="東京都女子プロダーツイベント出演依頼｜内堀遥香の活動シーン" title="イベントの様子5">
           </div>
         </div>
         <button id="gallery-right" class="gallery-arrow">▶</button>
