--- a/index.html
+++ b/index.html
@@ -36,231 +36,260 @@
 
   gtag('config', 'G-J8Y2ZGTG00');
 </script>
-
-<!-- jsonld -->
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "内堀 遥香",
-  "alternateName": "HARUKA UCHIBORI",
-  "image": "https://prodarts.github.io/player_hal/ogp.jpg",
-  "description": "プロダーツプレイヤー・内堀遥香（JAPAN LADIES所属）の公式イベント営業LP。店舗集客・SNS拡散・現場盛り上げすべてお任せください。Haruka Uchibori is a professional darts player based in Tokyo, Japan.",
-  "jobTitle": "プロダーツプレイヤー / Professional Darts Player",
-  "gender": "Female",
-  "nationality": "Japan",
-  "url": "https://prodarts.github.io/player_hal/",
-  "sameAs": [
-    "https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr",
-    "https://x.com/haru5372darts"
-  ],
-  "memberOf": [
-    {
-      "@type": "SportsOrganization",
-      "name": "Soft Darts Professional Tour JAPAN"
-    },
-    {
-      "@type": "SportsOrganization",
-      "name": "JAPAN LADIES"
-    }
-  ],
-  "homeLocation": {
-    "@type": "Place",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "東京都",
-      "addressRegion": "関東",
-      "addressCountry": "Japan"
-    }
-  },
-  "award": [
-    "JAPAN LADIES 2024年175位"
-  ],
-  "alumniOf": "元ダーツバー社員",
-  "knowsAbout": [
-    "ダーツイベント",
-    "店舗集客",
-    "SNS拡散",
-    "現場盛り上げ",
-    "初心者対応",
-    "Darts",
-    "Event MC",
-    "SNS Promotion"
-  ],
-  "hasOccupation": {
-    "@type": "Occupation",
-    "name": "プロダーツイベント出演・営業 / Darts Event Guest Player"
-  }
-}
-</script>
-
   
 </head>
-
 <body>
-  <!-- =====================  HEADER  ===================== -->
   <header>
+    <!-- プロフィール画像を追加 -->
     <div class="profile-image-container">
-      <img id="player-image" src="" alt="女子プロダーツプレイヤー" class="profile-img">
+        <img src="ogp.jpg" alt="女子プロダーツプレイヤー内堀遥香｜東京都でイベント出演依頼受付中" class="profile-img">
     </div>
-
-    <div id="player-catch"    class="catch"></div>
-    <div id="player-subcatch" class="subcatch"></div>
+    <div class="catch">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツでも大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div>
+    <div class="subcatch">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意なダーツプレイヤー<br>プロダーツイベント出演依頼</div>
   </header>
-
-  <!-- =====================  MAIN  ===================== -->
   <main class="container">
-    <!-- LP キャッチコピー -->
-    <h1 id="page-catch" class="blue-h1"></h1>
-
-    <!-- 1. プロフィール -------------------------------- -->
+    <h1 class="blue-h1">今日もどこかでダーツが出会いをつないでる</h1>
     <section class="profile-section section">
       <h2 class="section-title">プロフィール</h2>
       <table class="info-table">
-        <tr><td>名前</td>         <td id="player-name"></td></tr>
-        <tr><td>ニックネーム</td><td id="player-nickname"></td></tr>
-        <tr><td>特徴</td>         <td id="player-feature"></td></tr>
-        <tr><td>出身地</td>       <td id="player-birth"></td></tr>
-        <tr><td>活動エリア</td>   <td id="player-area"></td></tr>
-        <tr><td>所属</td>         <td id="player-org"></td></tr>
-        <tr><td>レーティング</td><td id="player-rating"></td></tr>
-        <tr class="sns-row">
-          <td>私のSNS</td>
-          <td>
-            <a id="player-instagram" href="#" target="_blank" rel="noopener">
-              <img src="Instagram_icon.png" alt="Instagram" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
-            </a>
-            <a id="player-x" href="#" target="_blank" rel="noopener">
-              <img src="X_icon.png" alt="X（旧Twitter）" style="width:32px;height:32px;vertical-align:middle;">
-            </a>
-          </td>
-        </tr>
+        <tr><td>名前</td><td>内堀 遥香<br>（HARUKA UCHIBORI）</td></tr>
+        <tr><td>ニックネーム</td><td>はる／はるちゃん</td></tr>
+        <tr><td>特徴</td><td>身長ぎり160（自称）／右利き／めっちゃ負けず嫌い😣</td></tr>
+        <tr><td>出身地</td><td>東京都</td></tr>
+        <tr><td>活動エリア</td><td>東京・関東エリア（その他、応相談）</td></tr>
+        <tr><td>所属</td><td>Soft Darts Professional Tour JAPAN・JAPAN LADIES</td></tr>
+        <tr><td>レーティング</td><td>ダーツライブ 10</td></tr>
+  <tr class="sns-row">
+  <td>私のSNS</td>
+  <td>
+    <a href="https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr" target="_blank" rel="noopener">
+      <img src="Instagram_icon.png" alt="Instagram" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
+    </a>
+    <a href="https://x.com/haru5372darts" target="_blank" rel="noopener">
+      <img src="X_icon.png" alt="X（旧Twitter）" style="width:32px;height:32px;vertical-align:middle;">
+    </a>
+  </td>
+</tr>
       </table>
     </section>
 
-    <!-- 2. 強み ---------------------------------------- -->
     <section class="strengths-section section">
       <h2 class="section-title">私の強み・できること</h2>
-      <ul id="player-strengths" class="strengths-list"></ul>
-      <div id="player-strength-description" class="strength-description"></div>
+      <ul class="strengths-list">
+        <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
+          <span class="strength-text">ドリンク運びはお手の物！</span>
+        </li>
+         <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
+          <span class="strength-text">目配りと周りへの気配り</span>
+        </li>
+        <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
+          <span class="strength-text">盛り上げ力は常に100%マックス！</span>
+        </li>
+        <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️⭐️⭐️</span>
+          <span class="strength-text">初心者・女性対応もお任せ下さい</span>
+        </li>
+        <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️☆☆</span>
+          <span class="strength-text">SNS集客→頑張って投稿...</span>
+        </li>
+        <li class="strength-item">
+          <span class="hearts">⭐️⭐️⭐️⭐️☆</span>
+          <span class="strength-text">柔軟対応・カスタム（お気軽にご相談ください）</span>
+        </li>
+      </ul>
+      <div class="strength-description">
+        元ダーツバーの社員だったので店内の細かな目配り気配りが得意です！<br><br>
+        ダーツもお酒も乾杯も大大大歓迎！<br>とにかくダーツして遊びましょう♡<br><br>
+        少しずつ成長して絶対にプロで活躍するので応援お願いします！<br>金額・条件などご相談はお気軽に。
+      </div>
     </section>
 
-    <!-- 3. ギャラリー ---------------------------------- -->
     <section class="gallery-section section">
       <h2 class="section-title">ギャラリー（宣伝用の使用OK）</h2>
       <div class="gallery-wrapper">
-        <button id="gallery-left"  class="gallery-arrow">◀</button>
-        <div   id="gallery-track" class="gallery-track"></div>
+        <button id="gallery-left" class="gallery-arrow">◀</button>
+        <div id="gallery-track" class="gallery-track">
+          <div class="gallery-item">
+            <img src="img_1.jpg" alt="内堀遥香｜東京都の女子プロダーツイベント出演・依頼はお気軽に" title="イベントの様子1">
+          </div>
+          <div class="gallery-item">
+            <img src="img_2.jpg" alt="女子プロダーツ内堀遥香｜東京都の店舗イベント出演・接客の様子" title="イベントの様子2">
+          </div>
+          <div class="gallery-item">
+            <img src="img_3.jpg" alt="内堀遥香プロ｜東京都女子プロダーツイベントでのダーツプレイ風景" title="イベントの様子3">
+          </div>
+          <div class="gallery-item">
+            <img src="img_4.jpg" alt="女子プロダーツプレイヤー内堀遥香｜イベント出演先店舗にて" title="イベントの様子4">
+          </div>
+          <div class="gallery-item">
+            <img src="img_5.jpg" alt="東京都女子プロダーツイベント出演依頼｜内堀遥香の活動シーン" title="イベントの様子5">
+          </div>
+        </div>
         <button id="gallery-right" class="gallery-arrow">▶</button>
       </div>
     </section>
 
-    <!-- 4. イベントメニュー ---------------------------- -->
     <section class="menu-section section">
       <h2 class="section-title">イベントメニュー</h2>
-      <ul id="event-menu" class="service-list"></ul>
+      <ul class="service-list">
+        <li>対戦チャレンジマッチ</li>
+        <li>プレイヤーday</li>
+        <li>お酒も好きなので飲みイベントもOK！</li>
+      </ul>
     </section>
 
-    <!-- 5. 実績・評価 ---------------------------------- -->
     <section class="achievements-section section">
       <h2 class="section-title">実績・評価</h2>
-      <div id="achievement-titles"      class="achievement-text"></div>
-      <div id="achievement-testimonial" class="achievement-text"></div>
+      <div class="achievement-text">
+        <div class="stats-summary">
+          ・JAPAN LADIES ほぼ参戦中<br>
+        </div>
+        <div class="stats-summary">
+          ・JAPAN LADIES 2024年175位<br>
+        </div>
+      </div>
+      <div class="achievement-text">
+        <div class="store-testimonial">
+          <b>高円寺Kplus店長</b><br>
+          いつもいろんなお客さんを巻き込みながらダーツをしてくれるので最近はお客さんのダーツ熱が上がってみんなダーツに燃えるようになりました。<br>
+        </div>
+      </div>
     </section>
 
-    <!-- 6. 価格・条件 ---------------------------------- -->
     <section class="price-section section">
       <h2 class="section-title">条件・費用</h2>
-      <div id="price-items" class="price-items"></div>
-      <div id="price-note"  class="price-note"></div>
+      <div class="price-items">
+        <div class="price-item">
+          <div class="item-label">ダーツプレイヤーday「基本4時間」</div>
+          <div class="item-detail">20,000円から（税込）</div>
+        </div>
+        <div class="price-item">
+          <div class="item-label">ハウスイベント「大会終了まで」</div>
+          <div class="item-detail">30,000円（税込）</div>
+        </div>
+          <div class="price-item">
+          <div class="item-label">大型トーナメント出演「閉会まで」</div>
+          <div class="item-detail">30,000円（税込）</div>
+        </div>
+        <div class="price-item">
+          <div class="item-label">その他</div>
+          <div class="item-detail">相談可能／お店・内容により変動が多少ありますのでお気軽にDMください。<br>柔軟にご対応致します。</div>
+        </div>
+      </div>
+      <div class="price-note">
+        ※交通費：都内一律1,000円／その他は場所により要相談<br><br>
+        ※宿泊費がかかる場合：お店で手配&ご負担、自身で手配した場合は後で全額負担（可能な限り安いプランで宿泊致します。）人の家は不可です。<br><br>
+        ※大会前後のその地域での数日間のイベント、複数店舗でのイベントは大歓迎です。<br><br>
+        ご予算やイベント内容に応じてついても柔軟に調整できますので、ぜひお気軽にご相談ください。まずは「相談だけ」でも大歓迎！
+      </div>
     </section>
 
-    <!-- 7. OK / NG ------------------------------------- -->
     <section class="okng-section section">
       <h2 class="section-title">OK / NGリスト</h2>
       <div class="okng-content">
         <div class="ok-list">
           <h3>OK（歓迎）</h3>
-          <ul id="ok-list"></ul>
+          <ul>
+            <li>ショット、クライナーOK（ほどほどで...）・ドリンク乾杯・写真撮影・SNS交流投稿</li>
+          </ul>
         </div>
         <div class="ng-list">
           <h3>NG（ご遠慮ください）</h3>
-          <ul id="ng-list"></ul>
+          <ul>
+            <li>お触り、強制飲酒、連絡先交換（SNSはOK）、長時間拘束</li>
+          </ul>
         </div>
       </div>
     </section>
 
-    <!-- 8. スポンサー ---------------------------------- -->
     <section class="sponsor-section section">
       <h2 class="section-title">スポンサー・おすすめ店舗</h2>
-      <ul id="sponsor-list" class="sponsor-list"></ul>
+      <ul class="sponsor-list">
+        <li class="sponsor-item">
+          <span class="sponsor-name">JOKER DRIVER</span>
+          <span class="sponsor-desc">プレイヤーグッズあります！<br>大会ブースか私から直接、手渡し致します！（サイン付きの可！）<br><br>アクリルキーホルダー 1,500円・タンブラー・ダーツライブカード・ダーツケースなど</span>
+          <a href="https://jokerdriver.com/" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+          <li class="sponsor-item">
+          <span class="sponsor-name">GSD</span>
+          <span class="sponsor-desc">カッコいいも可愛いも100%満足対応のオーダーユニフォーム屋さん</span> 
+          <a href="http://www.gsd-darts.com/" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+         <li class="sponsor-item">
+          <span class="sponsor-name">カラオケ＆ダーツBAR Kplus高円寺</span>
+          <span class="sponsor-desc">杉並区でダーツするならココが一番ダーツ熱がすごいからオススメ！</span> 
+          <a href="https://mintwood.github.io/kplus-koenji/index.html" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+         <li class="sponsor-item">
+          <span class="sponsor-name">D-drunk</span>
+          <span class="sponsor-desc">ダーツもカラオケも楽しめる！プロも多いからガチで楽しめる！</span> 
+          <a href="https://search.dartslive.com/jp/shop/86ee45be90b0a3f40d9b047a20a7ba1e" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+         <li class="sponsor-item">
+          <span class="sponsor-name">DARTS BAR ROCKS</span>
+          <span class="sponsor-desc">岡崎でダーツするならここ行ってみて！</span> 
+          <a href="https://search.dartslive.com/jp/shop/0c3d6010f50cee17a3f63593b5358cc4/basic-information" class="sponsor-btn" target="_blank" rel="noopener">ここをタップ</a>
+        </li>
+      </ul>
     </section>
-
-    <!-- 9. FAQ ----------------------------------------- -->
     <section class="faq-section section">
       <h2 class="section-title">Q&A・よくあるご質問</h2>
-      <ul id="faq-list" class="faq-list"></ul>
+      <ul class="faq-list">
+        <li><b>Q: 企画が未定でも頼めますか？</b><br>
+          A: →「ざっくり希望・ご予算だけでもご提案OK」</li><br>
+        <li><b>Q: イベントは盛り上がりますか？</b><br>
+          A: →「精一杯、お客様と交流しダーツやトークで盛り上げます！」</li>
+      </ul>
     </section>
-
-    <!-- 10. 推薦ターゲット ----------------------------- -->
     <section class="recommend-section section">
       <h2 class="section-title">こんなオーナー様、イベント企画担当様に！</h2>
-      <ul id="recommend-list" class="recommend-list"></ul>
+      <ul class="recommend-list">
+        <li>「プロイベント」でもっと集客したい方へ</li>
+        <li>「女性・若い層を増やしたい」方へ</li>
+        <li>「お店をもっと盛り上げたい！」方へ</li>
+      </ul>
     </section>
-
-    <!-- 11. お問い合わせ ------------------------------- -->
     <section class="contact-section section">
-      <h2 class="section-title">かんたん相談 &amp; お問い合わせ</h2>
-      <div id="contact-desc" class="contact-description"></div>
+      <h2 class="section-title">かんたん相談 & お問い合わせ</h2>
+      <div class="contact-description">
+        下記テンプレートに入力後、コピーしてInstagram、XのDMで送信してください。
+      </div>
+      <textarea id="contact-template" rows="10" class="input">
+【店舗名・会社名】
 
-      <textarea id="contact-template" rows="10" class="input"></textarea>
+【ご担当者名】
 
+【連絡先（店舗・会社）】
+
+【開催希望日・時間】
+
+【希望イベント内容】
+
+【ご予算・ご要望】
+
+【その他のご質問、ご要望】
+
+</textarea>
       <button class="cta-btn" onclick="copyContactTemplate()">この内容をコピーする</button>
       <div id="copy-alert" class="copy-alert" style="display:none;">コピーしました！DMで貼り付けて送信してください！</div>
-
       <div class="sns-contact-buttons">
-        <a id="contact-instagram" href="#" target="_blank" rel="noopener" class="sns-btn">InstagramでDMを送る</a>
-        <a id="contact-x"        href="#" target="_blank" rel="noopener" class="sns-btn">XでDMを送る</a>
+        <a href="https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr" target="_blank" rel="noopener" class="sns-btn">InstagramでDMを送る</a>
+        <a href="https://x.com/haru5372darts" target="_blank" rel="noopener" class="sns-btn">XでDMを送る</a>
       </div>
-
-      <div id="contact-note" class="contact-note"></div>
+      <div class="contact-note">
+        日程・希望・ざっくり予算だけでOK！<br>初めての店舗様も、お気軽にご相談ください
+      </div>
     </section>
+
   </main>
-
-  <!-- =====================  FOOTER  ===================== -->
   <footer>
-    <p>© <span id="copyright-name"></span> All Rights Reserved.</p>
+    <p>© HARUKA UCHIBORI All Rights Reserved.</p>
   </footer>
-
-   <!-- ▼▼▼ ここを追加 ▼▼▼ -->
-  <script>
-    /* ① ギャラリー左右スクロール */
-    document.addEventListener('DOMContentLoaded', () => {
-      const track = document.getElementById('gallery-track');
-      document.getElementById('gallery-left')
-              ?.addEventListener('click', () => track.scrollBy({ left:-280, behavior:'smooth'}));
-      document.getElementById('gallery-right')
-              ?.addEventListener('click', () => track.scrollBy({ left: 280, behavior:'smooth'}));
-    });
-
-    /* ② お問い合わせテンプレをコピー */
-    function copyContactTemplate(){
-      const txt = document.getElementById('contact-template');
-      txt.select(); document.execCommand('copy');
-      document.getElementById('copy-alert').style.display='block';
-      setTimeout(()=>{document.getElementById('copy-alert').style.display='none';},1700);
-    }
-
-    /* ③ JSON を読み込んでページに反映 */
-    fetch('./player_hal.json')
-      .then(res => res.json())
-      .then(data =>{
-        document.getElementById('player-image').src           = data.profile.profileImage;
-        document.getElementById('player-name').textContent    = data.profile.nameJP;
-        document.getElementById('player-catch').innerHTML     = data.profile.catch.replace(/\n/g,'<br>');
-        // ★ほかの要素も同じ書き方で fill していく
-      })
-      .catch(err => console.error('JSON 読み込み失敗', err));
-  </script>   <!-- ▲▲▲ ここまで ▲▲▲ -->
+  <script src="script.js"></script>
 </body>
 </html>
+
