--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
   </header>
   <main class="container">
     <h1 class="blue-h1">今日もどこかでダーツが出会いをつないでる</h1>
-    <section class="profile-section section">
+    <section class="profile-section section fade-in-item">
       <h2 class="section-title">プロフィール</h2>
       <table class="info-table">
         <tr><td>名前</td><td>内堀 遥香<br>（HARUKA UCHIBORI）</td></tr>
@@ -73,7 +73,7 @@
       </table>
     </section>
 
-    <section class="strengths-section section">
+    <section class="strengths-section section fade-in-item">
       <h2 class="section-title">私の強み・できること</h2>
       <ul class="strengths-list">
         <li class="strength-item">
@@ -108,7 +108,7 @@
       </div>
     </section>
 
-    <section class="gallery-section section">
+    <section class="gallery-section section fade-in-item">
       <h2 class="section-title">ギャラリー（宣伝用の使用OK）</h2>
       <div class="gallery-wrapper">
         <button id="gallery-left" class="gallery-arrow">◀</button>
@@ -133,7 +133,7 @@
       </div>
     </section>
 
-    <section class="menu-section section">
+    <section class="menu-section section fade-in-item">
       <h2 class="section-title">イベントメニュー</h2>
       <ul class="service-list">
         <li>対戦チャレンジマッチ</li>
@@ -142,7 +142,7 @@
       </ul>
     </section>
 
-    <section class="achievements-section section">
+    <section class="achievements-section section fade-in-item">
       <h2 class="section-title">実績・評価</h2>
       <div class="achievement-text">
         <div class="stats-summary">
@@ -160,7 +160,7 @@
       </div>
     </section>
 
-    <section class="price-section section">
+    <section class="price-section section fade-in-item">
       <h2 class="section-title">条件・費用</h2>
       <div class="price-items">
         <div class="price-item">
@@ -188,7 +188,7 @@
       </div>
     </section>
 
-    <section class="okng-section section">
+    <section class="okng-section section fade-in-item">
       <h2 class="section-title">OK / NGリスト</h2>
       <div class="okng-content">
         <div class="ok-list">
@@ -206,7 +206,7 @@
       </div>
     </section>
 
-    <section class="sponsor-section section">
+    <section class="sponsor-section section fade-in-item">
       <h2 class="section-title">スポンサー・おすすめ店舗</h2>
       <ul class="sponsor-list">
         <li class="sponsor-item">
@@ -236,7 +236,7 @@
         </li>
       </ul>
     </section>
-    <section class="faq-section section">
+    <section class="faq-section section fade-in-item">
       <h2 class="section-title">Q&A・よくあるご質問</h2>
       <ul class="faq-list">
         <li><b>Q: 企画が未定でも頼めますか？</b><br>
@@ -245,7 +245,7 @@
           A: →「精一杯、お客様と交流しダーツやトークで盛り上げます！」</li>
       </ul>
     </section>
-    <section class="recommend-section section">
+    <section class="recommend-section section fade-in-item">
       <h2 class="section-title">こんなオーナー様、イベント企画担当様に！</h2>
       <ul class="recommend-list">
         <li>「プロイベント」でもっと集客したい方へ</li>
@@ -253,7 +253,7 @@
         <li>「お店をもっと盛り上げたい！」方へ</li>
       </ul>
     </section>
-    <section class="contact-section section">
+    <section class="contact-section section fade-in-item">
       <h2 class="section-title">かんたん相談 & お問い合わせ</h2>
       <div class="contact-description">
         下記テンプレートに入力後、コピーしてInstagram、XのDMで送信してください。
@@ -292,4 +292,3 @@
   <script src="script.js"></script>
 </body>
 </html>
-
