--- a/index.html
+++ b/index.html
@@ -36,6 +36,207 @@
 
   gtag('config', 'G-J8Y2ZGTG00');
 </script>
+
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "WebPage",
+      "name": "内堀遥香｜女子プロダーツイベント出演依頼はこちら",
+      "url": "https://prodarts.github.io/player_hal/",
+      "description": "プロダーツプレイヤー・内堀遥香（JAPAN LADIES所属）の公式イベント営業LP。店舗集客・SNS拡散・現場盛り上げすべてお任せください。",
+      "image": {
+        "@type": "ImageObject",
+        "url": "https://prodarts.github.io/player_hal/ogp.jpg",
+        "width": "1200",
+        "height": "630"
+      },
+      "publisher": {
+        "@type": "Organization",
+        "name": "内堀遥香 イベント営業LP"
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "ホーム",
+            "item": "https://prodarts.github.io/player_hal/"
+          }
+        ]
+      },
+      "mainEntityOfPage": {
+        "@id": "#person"
+      }
+    },
+    {
+      "@type": "Person",
+      "@id": "#person",
+      "name": "内堀 遥香",
+      "alternateName": ["HARUKA UCHIBORI", "はる", "はるちゃん"],
+      "description": "プロダーツプレイヤーの内堀遥香。身長ぎり160cm、右利きで負けず嫌い。元ダーツバー社員として細かな目配り気配りが得意で、ガチダーツもワイワイダーツも大好き。お客様を巻き込み、楽しくお店を盛り上げることを得意とします。ダーツライブレーティング10。",
+      "url": "https://prodarts.github.io/player_hal/",
+      "image": "https://prodarts.github.io/player_hal/ogp.jpg",
+      "sameAs": [
+        "https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr",
+        "https://x.com/haru5372darts"
+      ],
+      "nationality": {
+        "@type": "Country",
+        "name": "日本"
+      },
+      "height": {
+        "@type": "QuantitativeValue",
+        "value": "160",
+        "unitCode": "CMT"
+      },
+      "knowsAbout": ["Darts", "Customer Service", "SNS Marketing", "Karaoke", "Drinking Events"],
+      "memberOf": [
+        {
+          "@type": "Organization",
+          "name": "Soft Darts Professional Tour JAPAN"
+        },
+        {
+          "@type": "Organization",
+          "name": "JAPAN LADIES"
+        }
+      ],
+      "worksFor": [
+        {
+          "@type": "Organization",
+          "name": "Soft Darts Professional Tour JAPAN"
+        },
+        {
+          "@type": "Organization",
+          "name": "JAPAN LADIES"
+        }
+      ],
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "東京都",
+        "addressCountry": "JP"
+      },
+      "areaServed": [
+        {
+          "@type": "State",
+          "name": "東京都"
+        },
+        {
+          "@type": "State",
+          "name": "関東地方"
+        },
+        "その他（応相談）"
+      ]
+    },
+    {
+      "@type": "ProfessionalService",
+      "@id": "#professionalService",
+      "name": "プロダーツイベント出演サービス",
+      "description": "プロダーツプレイヤー内堀遥香によるイベント出演依頼を受け付けています。店舗集客、SNS拡散、現場の盛り上げをトータルでお任せください。対戦チャレンジマッチ、プレイヤーday、飲みイベントなど、お客様のニーズに合わせた柔軟な対応が可能です。初心者や女性の参加も大歓迎。イベント後のSNS投稿やサイン・撮影会なども対応いたします。東京・関東エリアを中心に活動し、その他地域も応相談。金額や条件についてはお気軽にご相談ください。",
+      "provider": {
+        "@id": "#person"
+      },
+      "serviceType": [
+        "対戦チャレンジマッチ",
+        "プレイヤーday",
+        "飲みイベント"
+      ],
+      "areaServed": [
+        {
+          "@type": "State",
+          "name": "東京都"
+        },
+        {
+          "@type": "State",
+          "name": "関東地方"
+        },
+        "その他（応相談）"
+      ],
+      "offers": [
+        {
+          "@type": "Offer",
+          "name": "ダーツプレイヤーday「基本4時間」",
+          "description": "プロダーツプレイヤーによる基本4時間のイベント出演",
+          "priceSpecification": {
+            "@type": "PriceSpecification",
+            "price": "20000",
+            "priceCurrency": "JPY",
+            "valueAddedTaxIncluded": true,
+            "valueAddedTaxIncluded": true,
+            "minPrice": "20000"
+          }
+        },
+        {
+          "@type": "Offer",
+          "name": "ハウスイベント「大会終了まで」",
+          "description": "プロダーツプレイヤーによるハウストーナメントへの参加と進行（終了まで）",
+          "priceSpecification": {
+            "@type": "PriceSpecification",
+            "price": "30000",
+            "priceCurrency": "JPY",
+            "valueAddedTaxIncluded": true
+          }
+        },
+        {
+          "@type": "Offer",
+          "name": "大型トーナメント出演「閉会まで」",
+          "description": "プロダーツプレイヤーによる大型トーナメントへの出演と参加（閉会まで）",
+          "priceSpecification": {
+            "@type": "PriceSpecification",
+            "price": "30000",
+            "priceCurrency": "JPY",
+            "valueAddedTaxIncluded": true
+          }
+        },
+        {
+          "@type": "Offer",
+          "name": "その他イベント",
+          "description": "内容により多少の変動がありますのでお気軽にご連絡ください。柔軟にご対応致します。",
+          "priceSpecification": {
+            "@type": "PriceSpecification",
+            "priceCurrency": "JPY",
+            "description": "応相談"
+          }
+        }
+      ],
+      "review": {
+        "@type": "Review",
+        "author": {
+          "@type": "Person",
+          "name": "高円寺Kplus店長"
+        },
+        "reviewBody": "いつもいろんなお客さんを巻き込みながらダーツをしてくれるので最近はお客さんのダーツ熱が上がってみんなダーツに燃えるようになりました。",
+        "itemReviewed": {
+          "@id": "#person"
+        }
+      }
+    },
+    {
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "企画が未定でも頼めますか？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "ざっくり希望・ご予算だけでもご提案OK"
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "イベントは盛り上がりますか？",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "精一杯、お客様と交流しダーツやトークで盛り上げます！"
+          }
+        }
+      ]
+    }
+  ]
+}
+</script>
   
 </head>
 <body>
