--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
         <tr><td>特徴</td><td>身長ぎり160（自称）／右利き／めっちゃ負けず嫌い😣</td></tr>
         <tr><td>出身地</td><td>東京都</td></tr>
         <tr><td>活動エリア</td><td>東京・関東エリア（その他、応相談）</td></tr>
-        <tr><td>所属</td><td>Soft Darts Professional Tour JAPAN・JAPAN LADIES</td></tr>
+        <tr><td>所属</td><td>Soft Darts Professional Tour JAPAN LADIES</td></tr>
         <tr><td>レーティング</td><td>ダーツライブ 10</td></tr>
   <tr class="sns-row">
   <td>私のSNS</td>
