--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ gtag('config', 'G-123456789');
 <h2 class="section-title">イベントメニュー</h2>
 <ul class="service-list">
 <li>プレイヤーday</li>
-<li>みんなの胃袋つかみます！「りんごの3分クッキング！←『一押し』</li>
+<li>みんなの胃袋つかみます！「りんごの3分クッキング！←『一押し』（手作り料理イベント）</li>
 <li>対戦チャレンジマッチ</li>
 <li>ハウストーナメント参加</li>
 <li>DYNASTY試投会（応相談）</li>
