--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <div class="subcatch">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意なダーツプレイヤー<br>プロダーツイベント出演依頼</div>
   </header>
   <main class="container">
-    <h1 class="blue-h1">今日もどこかでダーツが出会いをつないでる</h1>
+    <h1 class="blue-h1">今日もどこかでダーツが<br>出会いをつないでる</h1>
     <section class="profile-section section fade-in-item">
       <h2 class="section-title">プロフィール</h2>
       <table class="info-table">
