--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
   <meta property="og:description" content="JAPAN LADIES所属。盛り上げ・集客・初心者対応もOK。現場とネットで“距離感バグってる”盛り上げ力を実感ください。">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://prodarts.github.io/player_hal/">
-<meta property="og:image" content="https://prodarts.github.io/player_hal/ogp.jpg">
-<meta property="og:image:secure_url" content="https://prodarts.github.io/player_hal/ogp.jpg">
-<meta property="og:image:type" content="image/jpeg">
-<meta property="og:image:width" content="1200">
-<meta property="og:image:height" content="630">
-<meta property="og:site_name" content="内堀遥香 イベント営業LP">
+  <meta property="og:image" content="https://prodarts.github.io/player_hal/ogp.jpg">
+  <meta property="og:image:secure_url" content="https://prodarts.github.io/player_hal/ogp.jpg">
+  <meta property="og:image:type" content="image/jpeg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:site_name" content="内堀遥香 イベント営業LP">
   
   <!-- Twitterカード -->
   <meta name="twitter:card" content="summary_large_image">
@@ -28,228 +28,231 @@
   <meta name="twitter:image:alt" content="女子プロダーツプレイヤー内堀遥香 イベントイメージ">
 
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-J8Y2ZGTG00"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-J8Y2ZGTG00"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-J8Y2ZGTG00');
+  </script>
 
-  gtag('config', 'G-J8Y2ZGTG00');
-</script>
-
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@graph": [
-    {
-      "@type": "WebPage",
-      "name": "内堀遥香｜女子プロダーツイベント出演依頼はこちら",
-      "url": "https://prodarts.github.io/player_hal/",
-      "description": "プロダーツプレイヤー・内堀遥香（JAPAN LADIES所属）の公式イベント営業LP。店舗集客・SNS拡散・現場盛り上げすべてお任せください。",
-      "image": {
-        "@type": "ImageObject",
-        "url": "https://prodarts.github.io/player_hal/ogp.jpg",
-        "width": "1200",
-        "height": "630"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "内堀遥香 イベント営業LP"
-      },
-      "breadcrumb": {
-        "@type": "BreadcrumbList",
-        "itemListElement": [
-          {
-            "@type": "ListItem",
-            "position": 1,
-            "name": "ホーム",
-            "item": "https://prodarts.github.io/player_hal/"
-          }
-        ]
-      },
-      "mainEntityOfPage": {
-        "@id": "#person"
-      }
-    },
-    {
-      "@type": "Person",
-      "@id": "#person",
-      "name": "内堀 遥香",
-      "alternateName": ["HARUKA UCHIBORI", "はる", "はるちゃん"],
-      "description": "プロダーツプレイヤーの内堀遥香。身長ぎり160cm、右利きで負けず嫌い。元ダーツバー社員として細かな目配り気配りが得意で、ガチダーツもワイワイダーツも大好き。お客様を巻き込み、楽しくお店を盛り上げることを得意とします。ダーツライブレーティング10。",
-      "url": "https://prodarts.github.io/player_hal/",
-      "image": "https://prodarts.github.io/player_hal/ogp.jpg",
-      "sameAs": [
-        "https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr",
-        "https://x.com/haru5372darts"
-      ],
-      "nationality": {
-        "@type": "Country",
-        "name": "日本"
-      },
-      "height": {
-        "@type": "QuantitativeValue",
-        "value": "160",
-        "unitCode": "CMT"
-      },
-      "knowsAbout": ["Darts", "Customer Service", "SNS Marketing", "Karaoke", "Drinking Events"],
-      "memberOf": [
-        {
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@graph": [
+      {
+        "@type": "WebPage",
+        "name": "内堀遥香｜女子プロダーツイベント出演依頼はこちら",
+        "url": "https://prodarts.github.io/player_hal/",
+        "description": "プロダーツプレイヤー・内堀遥香（JAPAN LADIES所属）の公式イベント営業LP。店舗集客・SNS拡散・現場盛り上げすべてお任せください。",
+        "image": {
+          "@type": "ImageObject",
+          "url": "https://prodarts.github.io/player_hal/ogp.jpg",
+          "width": "1200",
+          "height": "630"
+        },
+        "publisher": {
           "@type": "Organization",
-          "name": "Soft Darts Professional Tour JAPAN"
+          "name": "内堀遥香 イベント営業LP"
         },
-        {
-          "@type": "Organization",
-          "name": "JAPAN LADIES"
-        }
-      ],
-      "worksFor": [
-        {
-          "@type": "Organization",
-          "name": "Soft Darts Professional Tour JAPAN"
+        "breadcrumb": {
+          "@type": "BreadcrumbList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "name": "ホーム",
+              "item": "https://prodarts.github.io/player_hal/"
+            }
+          ]
         },
-        {
-          "@type": "Organization",
-          "name": "JAPAN LADIES"
-        }
-      ],
-      "address": {
-        "@type": "PostalAddress",
-        "addressLocality": "東京都",
-        "addressCountry": "JP"
-      },
-      "areaServed": [
-        {
-          "@type": "State",
-          "name": "東京都"
-        },
-        {
-          "@type": "State",
-          "name": "関東地方"
-        },
-        "その他（応相談）"
-      ]
-    },
-    {
-      "@type": "ProfessionalService",
-      "@id": "#professionalService",
-      "name": "プロダーツイベント出演サービス",
-      "description": "プロダーツプレイヤー内堀遥香によるイベント出演依頼を受け付けています。店舗集客、SNS拡散、現場の盛り上げをトータルでお任せください。対戦チャレンジマッチ、プレイヤーday、飲みイベントなど、お客様のニーズに合わせた柔軟な対応が可能です。初心者や女性の参加も大歓迎。イベント後のSNS投稿やサイン・撮影会なども対応いたします。東京・関東エリアを中心に活動し、その他地域も応相談。金額や条件についてはお気軽にご相談ください。",
-      "provider": {
-        "@id": "#person"
-      },
-      "serviceType": [
-        "対戦チャレンジマッチ",
-        "プレイヤーday",
-        "飲みイベント"
-      ],
-      "areaServed": [
-        {
-          "@type": "State",
-          "name": "東京都"
-        },
-        {
-          "@type": "State",
-          "name": "関東地方"
-        },
-        "その他（応相談）"
-      ],
-      "offers": [
-        {
-          "@type": "Offer",
-          "name": "ダーツプレイヤーday「基本4時間」",
-          "description": "プロダーツプレイヤーによる基本4時間のイベント出演",
-          "priceSpecification": {
-            "@type": "PriceSpecification",
-            "price": "20000",
-            "priceCurrency": "JPY",
-            "valueAddedTaxIncluded": true,
-            "valueAddedTaxIncluded": true,
-            "minPrice": "20000"
-          }
-        },
-        {
-          "@type": "Offer",
-          "name": "ハウスイベント「大会終了まで」",
-          "description": "プロダーツプレイヤーによるハウストーナメントへの参加と進行（終了まで）",
-          "priceSpecification": {
-            "@type": "PriceSpecification",
-            "price": "30000",
-            "priceCurrency": "JPY",
-            "valueAddedTaxIncluded": true
-          }
-        },
-        {
-          "@type": "Offer",
-          "name": "大型トーナメント出演「閉会まで」",
-          "description": "プロダーツプレイヤーによる大型トーナメントへの出演と参加（閉会まで）",
-          "priceSpecification": {
-            "@type": "PriceSpecification",
-            "price": "30000",
-            "priceCurrency": "JPY",
-            "valueAddedTaxIncluded": true
-          }
-        },
-        {
-          "@type": "Offer",
-          "name": "その他イベント",
-          "description": "内容により多少の変動がありますのでお気軽にご連絡ください。柔軟にご対応致します。",
-          "priceSpecification": {
-            "@type": "PriceSpecification",
-            "priceCurrency": "JPY",
-            "description": "応相談"
-          }
-        }
-      ],
-      "review": {
-        "@type": "Review",
-        "author": {
-          "@type": "Person",
-          "name": "高円寺Kplus店長"
-        },
-        "reviewBody": "いつもいろんなお客さんを巻き込みながらダーツをしてくれるので最近はお客さんのダーツ熱が上がってみんなダーツに燃えるようになりました。",
-        "itemReviewed": {
+        "mainEntityOfPage": {
           "@id": "#person"
         }
-      }
-    },
-    {
-      "@type": "FAQPage",
-      "mainEntity": [
-        {
-          "@type": "Question",
-          "name": "企画が未定でも頼めますか？",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "ざっくり希望・ご予算だけでもご提案OK"
-          }
+      },
+      {
+        "@type": "Person",
+        "@id": "#person",
+        "name": "内堀 遥香",
+        "alternateName": ["HARUKA UCHIBORI", "はる", "はるちゃん"],
+        "description": "プロダーツプレイヤーの内堀遥香。身長ぎり160cm、右利きで負けず嫌い。元ダーツバー社員として細かな目配り気配りが得意で、ガチダーツもワイワイダーツも大好き。お客様を巻き込み、楽しくお店を盛り上げることを得意とします。ダーツライブレーティング10。",
+        "url": "https://prodarts.github.io/player_hal/",
+        "image": "https://prodarts.github.io/player_hal/ogp.jpg",
+        "sameAs": [
+          "https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr",
+          "https://x.com/haru5372darts"
+        ],
+        "nationality": {
+          "@type": "Country",
+          "name": "日本"
         },
-        {
-          "@type": "Question",
-          "name": "イベントは盛り上がりますか？",
-          "acceptedAnswer": {
-            "@type": "Answer",
-            "text": "精一杯、お客様と交流しダーツやトークで盛り上げます！"
+        "height": {
+          "@type": "QuantitativeValue",
+          "value": "160",
+          "unitCode": "CMT"
+        },
+        "knowsAbout": ["Darts", "Customer Service", "SNS Marketing", "Karaoke", "Drinking Events"],
+        "memberOf": [
+          {
+            "@type": "Organization",
+            "name": "Soft Darts Professional Tour JAPAN"
+          },
+          {
+            "@type": "Organization",
+            "name": "JAPAN LADIES"
+          }
+        ],
+        "worksFor": [
+          {
+            "@type": "Organization",
+            "name": "Soft Darts Professional Tour JAPAN"
+          },
+          {
+            "@type": "Organization",
+            "name": "JAPAN LADIES"
+          }
+        ],
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "東京都",
+          "addressCountry": "JP"
+        },
+        "areaServed": [
+          {
+            "@type": "State",
+            "name": "東京都"
+          },
+          {
+            "@type": "State",
+            "name": "関東地方"
+          },
+          "その他（応相談）"
+        ]
+      },
+      {
+        "@type": "ProfessionalService",
+        "@id": "#professionalService",
+        "name": "プロダーツイベント出演サービス",
+        "description": "プロダーツプレイヤー内堀遥香によるイベント出演依頼を受け付けています。店舗集客、SNS拡散、現場の盛り上げをトータルでお任せください。対戦チャレンジマッチ、プレイヤーday、飲みイベントなど、お客様のニーズに合わせた柔軟な対応が可能です。初心者や女性の参加も大歓迎。イベント後のSNS投稿やサイン・撮影会なども対応いたします。東京・関東エリアを中心に活動し、その他地域も応相談。金額や条件についてはお気軽にご相談ください。",
+        "provider": {
+          "@id": "#person"
+        },
+        "serviceType": [
+          "対戦チャレンジマッチ",
+          "プレイヤーday",
+          "飲みイベント"
+        ],
+        "areaServed": [
+          {
+            "@type": "State",
+            "name": "東京都"
+          },
+          {
+            "@type": "State",
+            "name": "関東地方"
+          },
+          "その他（応相談）"
+        ],
+        "offers": [
+          {
+            "@type": "Offer",
+            "name": "ダーツプレイヤーday「基本4時間」",
+            "description": "プロダーツプレイヤーによる基本4時間のイベント出演",
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "price": "20000",
+              "priceCurrency": "JPY",
+              "valueAddedTaxIncluded": true,
+              "minPrice": "20000"
+            }
+          },
+          {
+            "@type": "Offer",
+            "name": "ハウスイベント「大会終了まで」",
+            "description": "プロダーツプレイヤーによるハウストーナメントへの参加と進行（終了まで）",
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "price": "30000",
+              "priceCurrency": "JPY",
+              "valueAddedTaxIncluded": true
+            }
+          },
+          {
+            "@type": "Offer",
+            "name": "大型トーナメント出演「閉会まで」",
+            "description": "プロダーツプレイヤーによる大型トーナメントへの出演と参加（閉会まで）",
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "price": "30000",
+              "priceCurrency": "JPY",
+              "valueAddedTaxIncluded": true
+            }
+          },
+          {
+            "@type": "Offer",
+            "name": "その他イベント",
+            "description": "内容により多少の変動がありますのでお気軽にご連絡ください。柔軟にご対応致します。",
+            "priceSpecification": {
+              "@type": "PriceSpecification",
+              "priceCurrency": "JPY",
+              "description": "応相談"
+            }
+          }
+        ],
+        "review": {
+          "@type": "Review",
+          "author": {
+            "@type": "Person",
+            "name": "高円寺Kplus店長"
+          },
+          "reviewBody": "いつもいろんなお客さんを巻き込みながらダーツをしてくれるので最近はお客さんのダーツ熱が上がってみんなダーツに燃えるようになりました。",
+          "itemReviewed": {
+            "@id": "#person"
           }
         }
-      ]
-    }
-  ]
-}
-</script>
-  
+      },
+      {
+        "@type": "FAQPage",
+        "mainEntity": [
+          {
+            "@type": "Question",
+            "name": "企画が未定でも頼めますか？",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "ざっくり希望・ご予算だけでもご提案OK"
+            }
+          },
+          {
+            "@type": "Question",
+            "name": "イベントは盛り上がりますか？",
+            "acceptedAnswer": {
+              "@type": "Answer",
+              "text": "精一杯、お客様と交流しダーツやトークで盛り上げます！"
+            }
+          }
+        ]
+      }
+    ]
+  }
+  </script>
 </head>
 <body>
   <header>
-    <!-- プロフィール画像を追加 -->
-    <div class="profile-image-container">
-        <img src="ogp.jpg" alt="女子プロダーツプレイヤー内堀遥香｜東京都でイベント出演依頼受付中" class="profile-img">
+    <!-- デザイン変更のため構造を修正 -->
+    <div class="header-content">
+        <div class="profile-image-container">
+            <img src="ogp.jpg" alt="女子プロダーツプレイヤー内堀遥香｜東京都でイベント出演依頼受付中" class="profile-img">
+        </div>
     </div>
-    <div class="catch">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツでも大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div>
-    <div class="subcatch">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意なダーツプレイヤー<br>プロダーツイベント出演依頼</div>
   </header>
   <main class="container">
     <h1 class="blue-h1">今日もどこかでダーツが<br>出会いをつないでる</h1>
+    <!-- ↓↓↓この section タグがこの通りになっているか確認！↓↓↓-->
+    <section class="section fade-in-item">
+        <div class="catch anim-text">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツでも大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div>
+        <div class="subcatch anim-text">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意な<br>ダーツプレイヤー</div>
+    </section>
+    <!-- ↑↑↑ここまで確認！↑↑↑ -->
     <section class="profile-section section fade-in-item">
       <h2 class="section-title">プロフィール</h2>
       <table class="info-table">
@@ -260,17 +263,17 @@
         <tr><td>活動エリア</td><td>東京・関東エリア（その他、応相談）</td></tr>
         <tr><td>所属</td><td>Soft Darts Professional Tour JAPAN LADIES</td></tr>
         <tr><td>レーティング</td><td>ダーツライブ 10</td></tr>
-  <tr class="sns-row">
-  <td>私のSNS</td>
-  <td>
-    <a href="https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr" target="_blank" rel="noopener">
-      <img src="Instagram_icon.png" alt="Instagram" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
-    </a>
-    <a href="https://x.com/haru5372darts" target="_blank" rel="noopener">
-      <img src="X_icon.png" alt="X（旧Twitter）" style="width:32px;height:32px;vertical-align:middle;">
-    </a>
-  </td>
-</tr>
+        <tr class="sns-row">
+          <td>私のSNS</td>
+          <td>
+            <a href="https://www.instagram.com/haru5372darts?igsh=MTEycWMxYmYyejU4bg%3D%3D&utm_source=qr" target="_blank" rel="noopener">
+              <img src="Instagram_icon.png" alt="Instagram" style="width:32px;height:32px;vertical-align:middle;margin-right:8px;">
+            </a>
+            <a href="https://x.com/haru5372darts" target="_blank" rel="noopener">
+              <img src="X_icon.png" alt="X（旧Twitter）" style="width:32px;height:32px;vertical-align:middle;">
+            </a>
+          </td>
+        </tr>
       </table>
     </section>
 
@@ -299,7 +302,7 @@
         </li>
         <li class="strength-item">
           <span class="hearts">⭐️⭐️⭐️⭐️☆</span>
-          <span class="strength-text">柔軟対応・カスタム（お気軽にご相談ください）</span>
+          <span class="strength-text">柔軟対応・カスタム<br>お気軽にご相談ください</span>
         </li>
       </ul>
       <div class="strength-description">
@@ -437,15 +440,17 @@
         </li>
       </ul>
     </section>
+
     <section class="faq-section section fade-in-item">
       <h2 class="section-title">Q&A・よくあるご質問</h2>
       <ul class="faq-list">
         <li><b>Q: 企画が未定でも頼めますか？</b><br>
-          A: →「ざっくり希望・ご予算だけでもご提案OK」</li><br>
+          A: →「ざっくり希望・ご予算だけでもご提案OK」</li><br><br>
         <li><b>Q: イベントは盛り上がりますか？</b><br>
           A: →「精一杯、お客様と交流しダーツやトークで盛り上げます！」</li>
       </ul>
     </section>
+
     <section class="recommend-section section fade-in-item">
       <h2 class="section-title">こんなオーナー様、イベント企画担当様に！</h2>
       <ul class="recommend-list">
@@ -454,6 +459,7 @@
         <li>「お店をもっと盛り上げたい！」方へ</li>
       </ul>
     </section>
+    
     <section class="contact-section section fade-in-item">
       <h2 class="section-title">かんたん相談 & お問い合わせ</h2>
       <div class="contact-description">
@@ -473,7 +479,6 @@
 【ご予算・ご要望】
 
 【その他のご質問、ご要望】
-
 </textarea>
       <button class="cta-btn" onclick="copyContactTemplate()">この内容をコピーする</button>
       <div id="copy-alert" class="copy-alert" style="display:none;">コピーしました！DMで貼り付けて送信してください！</div>
