--- a/index.html
+++ b/index.html
@@ -398,13 +398,19 @@
         <div class="ok-list">
           <h3>OK（歓迎）</h3>
           <ul>
-            <li>ショット、クライナーOK（ほどほどで...）・ドリンク乾杯・写真撮影・SNS交流投稿</li>
+            <li>ショット、クライナーOK（ほどほどで...）</li>
+            <li>ドリンク乾杯</li>
+            <li>写真撮影</li>
+            <li>SNS交流投稿</li>
           </ul>
         </div>
         <div class="ng-list">
           <h3>NG（ご遠慮ください）</h3>
           <ul>
-            <li>お触り、強制飲酒、連絡先交換（SNSはOK）、長時間拘束</li>
+            <li>お触り</li>
+            <li>強制飲酒</li>
+            <li>連絡先交換（SNSはOK）</li>
+            <li>長時間拘束</li>
           </ul>
         </div>
       </div>
