--- a/index.html
+++ b/index.html
@@ -244,12 +244,13 @@
             <img src="ogp.jpg" alt="女子プロダーツプレイヤー内堀遥香｜東京都でイベント出演依頼受付中" class="profile-img">
         </div>
     </div>
+    <div class="header-overlay-text">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツも大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div> <!-- ★追加！ -->
   </header>
   <main class="container">
     <h1 class="blue-h1">今日もどこかでダーツが<br>出会いをつないでる</h1>
     <!-- ↓↓↓この section タグがこの通りになっているか確認！↓↓↓-->
     <section class="section fade-in-item">
-        <div class="catch anim-text">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツでも大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div>
+        <div class="catch anim-text">『 まだ秘密兵器 』<br>ガチダーツもワイワイダーツで大好き！<br>みんなを巻き込んで<br>楽しくお店を盛り上げます！</div>
         <div class="subcatch anim-text">元ダーツバーの社員だったので<br>店内の細かな目配り気配りが得意な<br>ダーツプレイヤー</div>
     </section>
     <!-- ↑↑↑ここまで確認！↑↑↑ -->
